--- a/Introduction.tex
+++ b/Introduction.tex
@@ -4,9 +4,8 @@ This dissertation covers a variety of ways that nanophotonics can harness the ph
 The first chapter of this thesis introduces the field of nanophotonics and explains how electron density waves that propagate along a metal-dielectric interface, commonly known as plasmons, can have such a large impact on the field. Following, is a brief introduction on how plasmonic excitations are born, as well as the forces that result from the high electric field density plasmons are known for.
 In chapter 2 the development of magneto-optical responses in plasmonic materials, that explores the magnetization of nanoparticles via the illumination of circularly-polarized light. This phenomenon offers a new degree of control over the Lorentz force exerted on plasmonic nanoparticles. As described in the third chapter, Lorentz forces influence the motion of anisotropic nanoparticles, namely nanowires, illuminated at oblique incidences, and the non-intuitive motion subsequently results. In the following chapter (chapter 4) polarization properties are explored for a metasurface composed of non-chiral sub-structures, the phenomenon of which is derived from the Lorentz force that occurs between substructures that are measured in the polarization properties as light passes through the material. Finally, chapter 5 illustrates an efficient way to spatially encode information with fractal architecture.
 
-As of recent, there has been a lot of interest in the development of 3D (metamaterials) and 2D (metasurface) geometries that possess optical properties not found in nature. While there has been much advancement in the field, such as the fabrication of negative index materials [\cite{Padilla:2006, Dolling:07, shelby:489}], perfect lenses [\cite{Khorasaninejad:2016, Yang:14, Khorasaninejad1190}], and materials with permittivity close to zero [\cite{JPark:2015c, Alu:07}], many of these materials are limited to a small sample area and possess other pitfalls of top-down processing. Complete understanding of the optical forces generated on metallic nanoparticles leads the way to facilitate bottom-up processing of metasurfaces and metamaterials suitable for large-scale production. 
+%As of recent, there has been a lot of interest in the development of 3D (metamaterials) and 2D (metasurface) geometries that possess optical properties not found in nature. While there has been much advancement in the field, such as the fabrication of negative index materials [\cite{Padilla:2006, Dolling:07, shelby:489}], perfect lenses [\cite{Khorasaninejad:2016, Yang:14, Khorasaninejad1190}], and materials with permittivity close to zero [\cite{JPark:2015c, Alu:07}], many of these materials are limited to a small sample area and possess other pitfalls of top-down processing. Complete understanding of the optical forces generated on metallic nanoparticles leads the way to facilitate bottom-up processing of metasurfaces and metamaterials suitable for large-scale production. 
 
-Ultimately, it is hoped that this work furthers the research on how metasurfaces and metamaterials are designed, fabricated, and applied.
 %\section{Light}
 
 %\section{}
@@ -14,7 +13,22 @@ Ultimately, it is hoped that this work furthers the research on how metasurfaces
 %which is the topic of this work, led to the development of an emerging and fast
 %growing research field called plasmonics.
 \section{Light and Polarization}
-Electromagnetic waves are derived from non-zero solutions of Maxwell’s equations in vacuum in absence of electric charges [\cite{jackson, Landau}]. Polarization refers to the direction of the electromagnetic field vectors in space. Like color or intensity, the polarization of an electromagnetic wave is a fundamental property. The polarization in the most general sense, can be described by elliptical motion, relating to the path the electric field vector follows as the wave propagates. There are many light-matter interactions that depend on the incident polarization of the incident light, for example the strength of reflections, absorption or scattering [\cite{Hulst}]. Following conventions, we can consider the electric field of an plane electromagnetic wave travelling in the $z$-direction in Cartesian coordinates ($x,y,z$):
+Throughout history scientists have sought to understand the nature of light, and thus electromagnetism. As our knowledge has progressed, as has our ability to utilize electromagnetism for countless improvements to our quality of life. Classical electromagnetic wave effects have been exploited for over 8000 years when the first mirrors were fashioned in Anatolia [\cite{Enoch:06}] and lenses were fashioned by Assyrian astronomers over 3000 years ago. Since then, more precise and delicate instruments have been fashioned, and optical theory has been postulated in an effort to describe and probe the nature of the universe. It was Ibn al-Haytham, widely considered the first theoretical physicist, who developed the optical theory capable of describing reflection, refraction, and magnification 200 years before Renaissance scientists. The steady march of progress continued, in which the thirteenth century Italy saw the invention of eye glasses for vision correction [\cite{ilardi:07}]. Optics remained at the forefront of science into the Renaissance in which Leonardo Da Vinci invented the first instrument to measure light intensity, the human eye was realized as an instrument of optics, and Galileo Galilei's work catalysed the emergence of telescopes and microscopes in the 17th century. It was the end of the Renaissance that scientists began to perceive the model of light different to the traditional ray optics. The wave theory of optics that Huygens and Hooke developed was able to explain some of the phenomena of light that ray optics couldn't, such as thin film interference or polarization. 
+
+Until the work of James Maxwell in 1873, electric and magnetic fields were considered two separate forces. Maxwell linked the two through four well-know equations that bear his name. The now-called electromagnetic fields are derived from non-zero solutions of Maxwell’s four equations in vacuum in absence of electric charges [\cite{jackson, Landau}]. 
+
+The Optical Society of America reports that
+%From the lenses that Egyptians fashioned over 3000 years ago to the way we access internet which accelerates our knowledge gain.  Since then
+%more advanced and delicate instruments have been discovered and engineered, with increasing levels
+%of precision and care to the microscopic details of both matter and light;  for example telescopes,
+%microscopes and cameras.  It was not until the invention of the laser in 1960 that sources of high
+%spectral and angular brightness were realized and utilized. This important capability marks the birth
+%of a new  eld known as
+%photonics
+%, the study of light and other forms of electromagnetic energy whose
+%quantum unit is the photon.  The invention of the laser has really changed our society, for example
+
+Polarization refers to the direction of the electromagnetic field vectors in space. Like colour or intensity, the polarization of an electromagnetic wave is a fundamental property. The polarization in the most general sense can be described by elliptical motion, relating to the path the electric field vector follows as the wave propagates. There are many light-matter interactions that depend on the incident polarization of the incident light, for example the strength of reflections, absorption or scattering [\cite{Hulst}]. Following conventions, we can consider the electric field of an plane electromagnetic wave travelling in the $z$-direction in Cartesian coordinates ($x,y,z$):
 \begin{equation}
 \mathbf{E}(t, z) =\mathbf{E}_0 \cos(\omega t-kz-\phi),
 \end{equation}where $\mathbf{E}_0$ is the magnitude of the electric field in the $x-y$ plane, $\omega$ is the angular frequency, $t$ refers to time, $k$ is the wave-vector, and $\phi$ denotes some arbitrary phase. The electric field vector is perpendicular to the direction of propagation, $z$, so we can decompose the electric fields into $x$ and $y$ components:
