--- a/Abstract.tex
+++ b/Abstract.tex
@@ -12,9 +12,11 @@ by \\
 
 For millennia, scientists have sought to uncover the secrets what holds the world together. From which, the field of optics has been at the forefront, unravelling material properties through investigations of light-matter interactions. As the field has progressed, the smallest unit at which can be probed and manipulated has subsequently decreased, as such, the resulting sub-field\textemdash nanophotonics, which reflects the processing of light at the nanoscale, has blossomed into a vast design space for both applied and theoretical researchers.
 
-Plasmonics, the phenomena by which the electron-density of a material oscillates in response to incident electromagnetic radiation, has excited nanophotonics researchers for two reasons. The first is that plasmonics allows for the coupling of light to sub-wavelength dimensions, circumventing the diffraction limit and concentrating electromagnetic fields. The second is that advances in nanofabrication methods, driven by the silicon microelectronics industry, has allowed for the fabrication and development of metallic structures at the nanoscale, a requirement for the excitation of plasmons with visible light.
+Plasmonics, the phenomena by which the electron-density of a material oscillates in response to incident electromagnetic radiation, has excited nanophotonics researchers for two reasons. The first is that plasmonics allows for the coupling of light to sub-wavelength dimensions, circumventing the diffraction limit and concentrating electromagnetic fields, leading to significantly enhanced light-matter interactions. The second is that advances in nanofabrication methods, driven by the silicon microelectronics industry, has allowed for the fabrication and development of metallic structures at the nanoscale, a requirement for the excitation of plasmons with visible light.
 
 This thesis explores some aspects of how plasmonics can be used to exploit the design, fabrication and applications of nanostructures that result in materials with highly tailored optical properties. In particular, this thesis will demonstrate the understanding of how high electromagnetic field density that plasmons create produce optically-generated forces. Applications of the optically-generated forces presented here include the advanced control of nanoparticles that form the building blocks of metamaterials, as well as metasurface designs that vary polarization and encode information. 
+
+Ultimately, it is hoped that this work furthers the research on how metasurfaces and metamaterials are designed, fabricated, and applied.
 
 %Metamaterials and their 2D counterparts\textemdash metasurfaces, are example of applications may offer the potential to create novel materials from invisibility cloaks that hide objects to superlenses that beat the diffraction limit. 
 
