--- a/Introduction.tex
+++ b/Introduction.tex
@@ -12,23 +12,13 @@ In chapter 2 the development of magneto-optical responses in plasmonic materials
 %The study of optical phenomena related to the electromagnetic response of metals,
 %which is the topic of this work, led to the development of an emerging and fast
 %growing research field called plasmonics.
-\section{Light and Polarization}
-Throughout history scientists have sought to understand the nature of light, and thus electromagnetism. As our knowledge has progressed, as has our ability to utilize electromagnetism for countless improvements to our quality of life. Classical electromagnetic wave effects have been exploited for over 8000 years when the first mirrors were fashioned in Anatolia [\cite{Enoch:06}] and lenses were fashioned by Assyrian astronomers over 3000 years ago. Since then, more precise and delicate instruments have been fashioned, and optical theory has been postulated in an effort to describe and probe the nature of the universe. It was Ibn al-Haytham, widely considered the first theoretical physicist, who developed the optical theory capable of describing reflection, refraction, and magnification 200 years before Renaissance scientists. The steady march of progress continued, in which the thirteenth century Italy saw the invention of eye glasses for vision correction [\cite{ilardi:07}]. Optics remained at the forefront of science into the Renaissance in which Leonardo Da Vinci invented the first instrument to measure light intensity, the human eye was realized as an instrument of optics, and Galileo Galilei's work catalysed the emergence of telescopes and microscopes in the 17th century. It was the end of the Renaissance that scientists began to perceive the model of light different to the traditional ray optics. The wave theory of optics that Huygens and Hooke developed was able to explain some of the phenomena of light that ray optics couldn't, such as thin film interference or polarization. 
+\section{A brief history of light}
+Throughout history, scientists have sought to understand the nature of light, and thus electromagnetism. As our knowledge has progressed, so has our ability to utilize electromagnetism for countless improvements to our quality of life. Classical electromagnetic wave effects have been exploited for over 8000 years when the first mirrors were fashioned in Anatolia [\cite{Enoch:06}] and lenses were fashioned by Assyrian astronomers over 3000 years ago. Since then, more precise and delicate instruments have followed, and optical theory has been postulated in an effort to describe and probe the nature of the universe. It was Ibn al-Haytham, widely considered the first theoretical physicist, who developed the optical theory capable of describing reflection, refraction, and magnification 200 years before renaissance scientists. The steady march of progress continued, and in the 13th century Italy saw the invention of eye glasses for vision correction [\cite{ilardi:07}]. In the renaissance period optics remained at the forefront of science: Leonardo Da Vinci invented the first instrument to measure light intensity, the human eye was realized as an instrument of optics, and Galileo Galilei's work catalysed the emergence of telescopes and microscopes. It was only at the end of the renaissance period that scientists began to perceive the model of light different to the traditional ray optics, or particle theory of light. The wave theory of optics that Huygens and Hooke developed was able to explain some of the phenomena of light that ray optics could not, such as thin film interference or the polarization of light. For centuries after it seemed that the wave and particle theory and traditional ray were mutually exclusive. Only after the development of electromagnetic theory by James Clerk Maxwell in the 19th century was particle theory was succeeded by wave theory, and electric and magnetic fields, which were before considered two separate forces, were linked through four equations that bear now his name [\cite{jackson, Landau}]. 
 
-Until the work of James Maxwell in 1873, electric and magnetic fields were considered two separate forces. Maxwell linked the two through four well-know equations that bear his name. The now-called electromagnetic fields are derived from non-zero solutions of Maxwell’s four equations in vacuum in absence of electric charges [\cite{jackson, Landau}]. 
+In the field of optics there has been no bigger step than the invention of the laser in 1960, where such high sources of spectral brightness were realized and nonlinear effects could be discovered. This marked the birth of a new field\textemdash photonics, whose fundamental difference from optics is the existence of the quantum unit, known as the photon. The importance of phtonics in modern science cannot be understated, the Optical Society of America reports that since 1960 30\% of physics prize recipients have been photonics-related or strongly benefited from photonics technologies. The invention of the laser and subsequent products from the field has changed our society, from the way we support our global communications network to the way we correct our vision, revolutionizing our understanding of light control. 
 
-The Optical Society of America reports that
-%From the lenses that Egyptians fashioned over 3000 years ago to the way we access internet which accelerates our knowledge gain.  Since then
-%more advanced and delicate instruments have been discovered and engineered, with increasing levels
-%of precision and care to the microscopic details of both matter and light;  for example telescopes,
-%microscopes and cameras.  It was not until the invention of the laser in 1960 that sources of high
-%spectral and angular brightness were realized and utilized. This important capability marks the birth
-%of a new  eld known as
-%photonics
-%, the study of light and other forms of electromagnetic energy whose
-%quantum unit is the photon.  The invention of the laser has really changed our society, for example
-
-Polarization refers to the direction of the electromagnetic field vectors in space. Like colour or intensity, the polarization of an electromagnetic wave is a fundamental property. The polarization in the most general sense can be described by elliptical motion, relating to the path the electric field vector follows as the wave propagates. There are many light-matter interactions that depend on the incident polarization of the incident light, for example the strength of reflections, absorption or scattering [\cite{Hulst}]. Following conventions, we can consider the electric field of an plane electromagnetic wave travelling in the $z$-direction in Cartesian coordinates ($x,y,z$):
+\section{Polarization}
+The ability to manipulate and control lights fundamental properties, colour, intensity, and polarization, through light-matter interactions is the ultimate goal for photonics researchers. Polarization refers to the direction of the electromagnetic field vectors in space. In the most general sense it can be described by elliptical motion, relating to the path the electric field vector follows as the wave propagates. There are many light-matter interactions that depend on the incident polarization of the incident light, for example the strength of reflections, absorption or scattering [\cite{Hulst}]. Following conventions, we can consider the electric field of an plane electromagnetic wave travelling in the $z$-direction in Cartesian coordinates ($x,y,z$):
 \begin{equation}
 \mathbf{E}(t, z) =\mathbf{E}_0 \cos(\omega t-kz-\phi),
 \end{equation}where $\mathbf{E}_0$ is the magnitude of the electric field in the $x-y$ plane, $\omega$ is the angular frequency, $t$ refers to time, $k$ is the wave-vector, and $\phi$ denotes some arbitrary phase. The electric field vector is perpendicular to the direction of propagation, $z$, so we can decompose the electric fields into $x$ and $y$ components:
