--- a/Acknowledgments.tex
+++ b/Acknowledgments.tex
@@ -6,7 +6,7 @@ To my father whose competence and independence embodies the spirit of a physicis
 Heartfelt thanks my adviser Prof. Luat Vuong for unlimited guidance and ideas.
 To my committee members. Professor Viond Menon, whose intuition and knowledge in the field of nanophotonics is extraordinary.
 Professor Azi Genack, whose humble guidance and understanding on light scattering is truly remarkable.
-Professor Harry Gafney, for his ability to transform the mood of the room for the positive and his wealth of knowledge and information.
+Professor Harry Gafney, for and his wealth of knowledge and information.
 And finally, Dr Stein for brilliant support at Brookhaven National Laboratory. 
 
 To fellow lab mate, Nicolas Proscia, whose valuable discussions have been truly vital in this journey. 
@@ -17,7 +17,7 @@ To Howard Rose and Noel Evans, whose lessons I will carry with me for a long tim
 To Tony, the janitor, whose outlook on life is a reminder to appreciate the important things. To Daniel Moy who has always been a pleasure to work with.
 To my friends Avinash Lalwani, Abhishek Jha, Brian Taylor, Karan Mehra, Shalini Israni, and Kahlua for accepting nothing less than me.
 To fellow graduate student Arpita Biswas, whose common ground we will always share.
-To Thiviya Navaratnam whose belief in me has gone unwaivering.
+To Thiviya Navaratnam whose belief in me has been unwavering.
 
 
 Content from chapter 2 is reproduced with permission from [\bibentry{Moocarme2014}] 2014 Copyright American Chemical Society.\\
