--- a/Ch3_diffractal2.tex
+++ b/Ch3_diffractal2.tex
@@ -153,12 +153,12 @@ If the trade-off between bit-rate and robust reconstruction are mitigated, then 
 (a) $\Big[\begin{smallmatrix} 1 & 0 & 1\\ 1 & 1 & 1\\ 1 & 0 & 1 \end{smallmatrix}\Big]$, (b) $\Big[\begin{smallmatrix} 1 & 1 & 0 \\ 0 & 1 & 1\\ 0 & 1 & 1\end{smallmatrix}\Big]$, and (c) $\Big[\begin{smallmatrix} 1 & 0 & 0 \\ 1 & 1 & 0\\ 1 & 1 & 1\end{smallmatrix}\Big]$. The fractal signals FS are shown with their corresponding experimentally-reconstructed fractal signals RFS from the experimental setup in Fig. \ref{ExpSetup}(a).  The lower-right inset shows the reconstructed original signal ROS. (d) Example application: transmitted fractal signal FS is received at a far-field distance as a diffractal signal DS, where a roaming set of receivers, with only a diffractal subsection BDS, reconstructs the original signal OS.}
 \label{Multiplex}
 \end{figure}
-This can be applied to more complex shapes and structures, for example, an $16\times 16$ pixel smiley face shown in Fig.~\ref{face}. The Fourier transform of the smiley face is taken; part of the Fourier transform is blocked; and a reconstruction of the image is attempted via the inverse Fourier transform. The same experimental procedure as shown in Fig.~\ref{ExpSetup} is utilized. As can be seen from Fig.~\ref{face} when just the image is sent through the experimental setup the image reconstructed is not recognizable at all. However when the image is fractalized even just one order the image becomes recognizable. Unfortunately due to the limitations of pixels on the SLM no higher orders can be achieved.\\
-\begin{figure}[h!]
-\includegraphics[width=\textwidth]{imgRecon.pdf}
-\caption[]{As an example of a more complicated image, a smiley face is fractalized, the Fourier transform is taken, 99\% of the signal is blocked at the focal plane, and the image is reconstructed. This is compared to the original signal that is not fractalized.}
-\label{face}
-\end{figure}
+%This can be applied to more complex shapes and structures, for example, an $16\times 16$ pixel smiley face shown in Fig.~\ref{face}. The Fourier transform of the smiley face is taken; part of the Fourier transform is blocked; and a reconstruction of the image is attempted via the inverse Fourier transform. The same experimental procedure as shown in Fig.~\ref{ExpSetup} is utilized. As can be seen from Fig.~\ref{face} when just the image is sent through the experimental setup the image reconstructed is not recognizable at all. However when the image is fractalized even just one order the image becomes recognizable. Unfortunately due to the limitations of pixels on the SLM no higher orders can be achieved.\\
+%\begin{figure}[h!]
+%\includegraphics[width=\textwidth]{imgRecon.pdf}
+%\caption[]{As an example of a more complicated image, a smiley face is fractalized, the Fourier transform is taken, 99\% of the signal is blocked at the focal plane, and the image is reconstructed. This is compared to the original signal that is not fractalized.}
+%\label{face}
+%\end{figure}
 
 Fractal structures have been utilized in signal communications and data compression for decades. Fractal antennas for the radio frequency and microwave regimes are known for being compact and versatile over wide spectral bands [\cite{Radonic,Puente-Baliarda}]. Fractal encoding algorithms enable image compressing with higher-resolution compression at the expense of greater algorithmic complexity [\cite{Jacquin}]. The trade-off for higher resolution fractal-compressed images is higher processing times, which presents a limitation of their presence in data communications. Recently, however, there has been a resurgence of interest in fractal architecture due to their robust properties in optical transmission.
 
