--- a/Ch4_metasurface.tex
+++ b/Ch4_metasurface.tex
@@ -1,6 +1,6 @@
 \def\rcurs{{\mbox{$\resizebox{.16in}{.08in}{\includegraphics{ScriptR}}$}}} 
 
-In chapters 2 and 3, Lorentz forces are discussed on individual nanoparticles. In this chapter discusses interaction forces between such resonators, in particular a metasurface design that produces a chiral response from an array of achiral sub-structures, or meta-atoms. In general, the response of an individual meta-atom is extrapolated to explain the collective response of a metasurface, in a manner that neglects the interactions between meta-atoms. Thus, the convention is that chiral responses are born from metasurfaces composed of chiral meta-atoms. This chapter studies a metasurface that is composed of tilted achiral meta-atoms with no spatial variation of the unit-cell yet derives appreciable optical chirality solely from the asymmetric interactions between meta-atoms. Interactions between meta-atoms are modelled as the Lorentz force that arises from the Larmor radiation of adjacent plasmonic resonators because their inclusion accurately predicts the bonding/anti-bonding modes that are measured experimentally. Experimentally observed are the emergence of multiple polarization eigenmodes, among other polarization-dependent responses, which cannot be modeled with the transmission matrix formalism. The results are essential for the precise characterization and design of metasurfaces. 
+In chapters 2 and 3, Lorentz forces are discussed on individual nanoparticles. In this chapter forces between resonators are investigated, in particular a metasurface design that produces a chiral response from an array of achiral sub-structures, or meta-atoms. In general, the response of an individual meta-atom is extrapolated to explain the collective response of a metasurface, in a manner that neglects the interactions between meta-atoms. Thus, the convention is that chiral responses are born from metasurfaces composed of chiral meta-atoms. This chapter studies a metasurface that is composed of tilted achiral meta-atoms with no spatial variation of the unit-cell yet derives appreciable optical chirality solely from the asymmetric interactions between meta-atoms. Interactions between meta-atoms are modelled as the Lorentz force that arises from the Larmor radiation of adjacent plasmonic resonators because their inclusion accurately predicts the bonding/anti-bonding modes that are measured experimentally. Experimentally observed are the emergence of multiple polarization eigenmodes, among other polarization-dependent responses, which cannot be modelled with the transmission matrix formalism. The results are essential for the precise characterization and design of metasurfaces. 
 
 
 \section{Introduction} 
