--- a/Introduction.tex
+++ b/Introduction.tex
@@ -13,9 +13,9 @@ In chapter 2 the development of magneto-optical responses in plasmonic materials
 %which is the topic of this work, led to the development of an emerging and fast
 %growing research field called plasmonics.
 \section{A brief history of light}
-Throughout history, scientists have sought to understand the nature of light, and thus electromagnetism. As our knowledge has progressed, so has our ability to utilize electromagnetism for countless improvements to our quality of life. Classical electromagnetic wave effects have been exploited for over 8000 years when the first mirrors were fashioned in Anatolia [\cite{Enoch:06}] and lenses were fashioned by Assyrian astronomers over 3000 years ago. Since then, more precise and delicate instruments have followed, and optical theory has been postulated in an effort to describe and probe the nature of the universe. It was Ibn al-Haytham, widely considered the first theoretical physicist, who developed the optical theory capable of describing reflection, refraction, and magnification 200 years before renaissance scientists. The steady march of progress continued, and in the 13th century Italy saw the invention of eye glasses for vision correction [\cite{ilardi:07}]. In the renaissance period optics remained at the forefront of science: Leonardo Da Vinci invented the first instrument to measure light intensity, the human eye was realized as an instrument of optics, and Galileo Galilei's work catalysed the emergence of telescopes and microscopes. It was only at the end of the renaissance period that scientists began to perceive the model of light different to the traditional ray optics, or particle theory of light. The wave theory of optics that Huygens and Hooke developed was able to explain some of the phenomena of light that ray optics could not, such as thin film interference or the polarization of light. For centuries after it seemed that the wave and particle theory and traditional ray were mutually exclusive. Only after the development of electromagnetic theory by James Clerk Maxwell in the 19th century was particle theory was succeeded by wave theory, and electric and magnetic fields, which were before considered two separate forces, were linked through four equations that bear now his name [\cite{jackson, Landau}]. 
+Throughout history, scientists have sought to understand the nature of light, and thus electromagnetism. As our knowledge has progressed, so has our ability to utilize electromagnetism for countless improvements to our quality of life. Classical electromagnetic wave effects have been exploited for over 8000 years when the first mirrors were fashioned in Anatolia [\cite{Enoch:06}] and lenses were fashioned by Assyrian astronomers over 3000 years ago. Since then, more precise and delicate instruments have followed, and optical theory has been postulated in an effort to describe and probe the nature of the universe. It was Ibn al-Haytham, widely considered the first theoretical physicist, who developed the optical theory capable of describing reflection, refraction, and magnification 200 years before renaissance scientists. The steady march of progress continued, and in the 13th century Italy saw the invention of eye glasses for vision correction [\cite{ilardi:07}]. In the renaissance period optics remained at the forefront of science: Leonardo Da Vinci invented the first instrument to measure light intensity, the human eye was realized as an instrument of optics, and Galileo Galilei's work catalysed the emergence of telescopes and microscopes. It was only at the end of the renaissance period that scientists began to perceive the model of light different to the traditional ray optics, or particle theory of light. The wave theory of optics that Huygens and Hooke developed was able to explain some of the phenomena of light that ray optics could not, such as thin film interference or the polarization of light. For centuries after it seemed that the wave and particle theory were mutually exclusive. Only after the development of electromagnetic theory by James Clerk Maxwell in the 19th century was particle theory was succeeded by wave theory, and electric and magnetic fields, which were before considered two separate forces, were linked through four equations that bear now his name [\cite{jackson, Landau}]. 
 
-In the field of optics there has been no bigger step than the invention of the laser in 1960, where such high sources of spectral brightness were realized and nonlinear effects could be discovered. This marked the birth of a new field\textemdash photonics, whose fundamental difference from optics is the existence of the quantum unit, known as the photon. The importance of phtonics in modern science cannot be understated, the Optical Society of America reports that since 1960 30\% of physics prize recipients have been photonics-related or strongly benefited from photonics technologies. The invention of the laser and subsequent products from the field has changed our society, from the way we support our global communications network to the way we correct our vision, revolutionizing our understanding of light control. 
+In the field of optics there has been no bigger leap in progress than that which the invention of the laser has in 1960 has provided, where such high sources of spectral brightness were realized and nonlinear effects could be discovered. This marked the birth of a new field\textemdash photonics, whose fundamental difference from optics is the existence of the quantum unit, known as the photon. The importance of photonics in modern science cannot be understated, the Optical Society of America reports that since 1960 30\% of physics prize recipients have been photonics-related or strongly benefited from photonics technologies. The invention of the laser and subsequent products from the field has changed our society, from the way we support our global communications network to the way we correct our vision, revolutionizing our understanding of light control. 
 
 \section{Polarization}
 The ability to manipulate and control lights fundamental properties, colour, intensity, and polarization, through light-matter interactions is the ultimate goal for photonics researchers. Polarization refers to the direction of the electromagnetic field vectors in space. In the most general sense it can be described by elliptical motion, relating to the path the electric field vector follows as the wave propagates. There are many light-matter interactions that depend on the incident polarization of the incident light, for example the strength of reflections, absorption or scattering [\cite{Hulst}]. Following conventions, we can consider the electric field of an plane electromagnetic wave travelling in the $z$-direction in Cartesian coordinates ($x,y,z$):
@@ -94,7 +94,7 @@ This leads to a Lorentz-oscillator form of the motion of the charge particle [\c
 The modified dielectric constant gives rise to a number of interesting properties that include a modification to the refractive index and conductivity of the material.
 
 The dispersion relation for a plasma is given by the relation $\omega^2 = \omega_p^2+c^2k^2$ which results in an asymptotically linear behaviour. Figure~\ref{dispRelation} shows an example of the dispersion relation of aluminium.
-\begin{figure}[b!]
+\begin{figure}[h!t]
 \centering
 \includegraphics[width=0.75\textwidth]{dispRelation.pdf}
 \caption{Dispersion relation of surface plasmon modes in aluminium with water ($\epsilon_d=1.77$) as the surrounding dielectric. Dashed line represents the light line.}
@@ -170,8 +170,7 @@ Solving Maxwell's equations, $\nabla\times \mathbf{H} = \frac{\epsilon}{c}\parti
 (I)/(II): \frac{k_{zm}}{k_{zd}}\frac{H_{ym}}{H_{yd}} &=-\frac{\epsilon_m}{\epsilon_d}\frac{E_{xm}}{E_{xd}},
 \end{split}
 \end{equation}
-where region $(I)$ represents the metal and region $(II)$ represents the dielectric. Using the boundary condition $E_{xm} = E_{xd}$ and $H_{ym} = H_{yd}$ and the general relation $k_x^2+k_y^2+k_z^2 = k^2 = \epsilon\frac{\omega^2}{c^2}$
-The relations for the in and out-of-plane vectors are obtained:
+where region $(I)$ represents the metal and region $(II)$ represents the dielectric. Using the boundary condition $E_{xm} = E_{xd}$ and $H_{ym} = H_{yd}$ and the relation $k_x^2+k_y^2+k_z^2 = k^2 = \epsilon\frac{\omega^2}{c^2}$, the relations for the in and out-of-plane vectors are obtained:
 \begin{equation}
 \begin{split}
 k_x^2 &= \frac{\omega^2}{c^2}\frac{\epsilon_m\epsilon_d}{\epsilon_m+\epsilon_d}\\
@@ -187,12 +186,14 @@ k_zd^2 &= \frac{\omega^2}{c^2}\frac{\epsilon_d}{\epsilon_m+\epsilon_d}\\
 %https://sites.google.com/site/caltechhowardlee/Research
 
 \subsection{Nonlinear plasmonics}
-\par Nonlinear effects are governed by photon-photon interactions in materials, and thus, are generally weak. The scattering and absorption cross-sections of plasmonic nanoparticles are much greater than their geometrical cross-sections which lead to large local field enhancements around the the nanostructures to enable nonlinear effects to occur. Due to high local field enhancement plasmonic excitations has enabled nonlinear phenomenon such as surface-enhanced Raman scattering [\cite{Nie}], second harmonic generation [\cite{Canfield}], and enhanced magneto-optical effects [\cite{Moocarme2014,Belotelov}]. A material's response to an electric field, $E$, is governed by the material polarization $P$ [\cite{Kauranen}]:
+\par Nonlinear effects are governed by photon-photon interactions in materials, and thus, are generally weak. The scattering and absorption cross-sections of plasmonic nanoparticles are much greater than their geometrical cross-sections which lead to large local field enhancements around the the nanostructures to enable nonlinear effects to occur. These high local field enhancement have enabled nonlinear phenomenon such as surface-enhanced Raman scattering [\cite{Nie}], second harmonic generation [\cite{Canfield}], and enhanced magneto-optical effects [\cite{Moocarme2014,Belotelov}]. 
+
+A materials polarizability, $P$, governs its response to an electric field, $E$ [\cite{Kauranen}]:
 \begin{equation}
 P = \epsilon_0\big[\chi^{(1)}E+\chi^{(2)}E^2+\chi^{(3)}E^3+\ldots\big]
 \label{Pol}
 \end{equation}
-where $\chi^{(n)}$ is the $n$-th order susceptibility of the material [\cite{Boyd}]. In general the lower-order terms of Eq. \ref{Pol} dominate, however, in the presence of high electric fields, such as the fields generated by plasmonic resonances, the higher-order terms become non-negligible. The first order responses consistent with the $\chi^{(1)}$ term such as scattering and absorption have been studied for centuries and are well understood [\cite{Mie, Hulst}]. Optical responses of materials are less understood in the presence of strong electrics fields,  where nonlinear effects need to be considered. Frequencies of radiation different from the incident will be produced due to the $E^n$ term when $n\neq 1$. Moreover, these new frequencies may interact with the incident field that further influence the nonlinear fields produced. Sum- and difference-frequency generation are a result of the nonlinear response; an example of sum-frequency generation is two incident photons with the same frequency interact in the second order and produce one photon with double the frequency [\cite{Canfield}].
+where $\chi^{(n)}$ is the $n$-th order susceptibility of the material [\cite{Boyd}]. In general the lower-order terms of Eq. \ref{Pol} dominate, however, in the presence of high electric fields, such as the fields generated by plasmonic resonances, the higher-order terms become non-negligible. The first order responses consistent with the $\chi^{(1)}$ term such as scattering and absorption have been studied for centuries and are well understood [\cite{Mie, Hulst}]. Optical responses of materials are less understood in the presence of strong electrics fields,  where nonlinear effects are non-negligible. Frequencies of radiation different from the incident will be produced due to the $E^n$ term when $n\neq 1$. Moreover, these new frequencies may interact with the incident field that further influence the nonlinear fields produced. Sum- and difference-frequency generation are a result of the nonlinear response; an example of sum-frequency generation is two incident photons with the same frequency interact in the second order and produce one photon with double the frequency [\cite{Canfield}].
 
 For a frequency $\omega$, first order responses vary as $\Re[e^{-i\omega t}]$; second order responses vary as $\Re[e^{-i\omega t}]^2 = \frac{1}{2}(1+\Re[e^{-2i\omega t}])$, where $\Re$ denotes the real part. This is where the similarity between the second order responses that oscillate $\propto 2\omega$ and the non-oscillating rectification responses are seen [\cite{Shen}]. To this end, DC responses will have the same magnitude  as the second harmonic, $\cos(2\omega t)$, term. It is these DC responses that are responsible for the Lorentz forces studied in this thesis. DC responses have nonzero time-averaged value where time-harmonic terms are zero, that allow DC responses to be easily measurable over their second-harmonic oscillating counterpart, especially at visible frequencies.
 
