--- a/Abstract.tex
+++ b/Abstract.tex
@@ -10,7 +10,7 @@ by \\
 \vspace{0.25in}
 \noindent 
 
-For millennia, scientists have sought to uncover the secrets what holds the world together. From which, the field of optics has been at the forefront, unravelling material properties through investigations of light-matter interactions. As the field has progressed, the smallest unit at which can be probed and manipulated has subsequently decreased, as such, the resulting sub-field\textemdash nanophotonics, which reflects the processing of light at the nanoscale, has blossomed into a vast design space for both applied and theoretical researchers.
+For millennia, scientists have sought to uncover the secrets of what holds the world together. From which, the field of optics has been at the forefront, unravelling material properties through investigations of light-matter interactions. As the field has progressed, the smallest unit at which matter can be probed and manipulated has subsequently decreased, as such, the resulting sub-field nanophotonics\textemdash  which reflects the processing of light at the nanoscale\textemdash has blossomed into a vast design space for both applied and theoretical researchers.
 
 Plasmonics, the phenomena by which the electron-density of a material oscillates in response to incident electromagnetic radiation, has excited nanophotonics researchers for two reasons. The first is that plasmonics allows for the coupling of light to sub-wavelength dimensions, circumventing the diffraction limit and concentrating electromagnetic fields, leading to significantly enhanced light-matter interactions. The second is that advances in nanofabrication methods, driven by the silicon microelectronics industry, has allowed for the fabrication and development of metallic structures at the nanoscale, a requirement for the excitation of plasmons with visible light.
 
