--- a/Abstract.tex
+++ b/Abstract.tex
@@ -12,7 +12,7 @@ by \\
 
 For millennia, scientists have sought to uncover the secrets of what holds the world together. From which, the field of optics has been at the forefront, unravelling material properties through investigations of light-matter interactions. As the field has progressed, the smallest unit at which matter can be probed and manipulated has subsequently decreased, as such, the resulting sub-field nanophotonics\textemdash  which reflects the processing of light at the nanoscale\textemdash has blossomed into a vast design space for both applied and theoretical researchers.
 
-Plasmonics, the phenomena by which the electron-density of a material oscillates in response to incident electromagnetic radiation, has excited nanophotonics researchers for two reasons. The first is that plasmonics allows for the coupling of light to sub-wavelength dimensions, circumventing the diffraction limit and concentrating electromagnetic fields, leading to significantly enhanced light-matter interactions. The second is that advances in nanofabrication methods, driven by the silicon microelectronics industry, has allowed for the fabrication and development of metallic structures at the nanoscale, a requirement for the excitation of plasmons with visible light.
+Plasmonics, the phenomena by which the electron-density of a material oscillates in response to incident electromagnetic radiation, is a subject that has excited nanophotonics researchers for two reasons. The first is that plasmonic excitations are able to couple light to sub-wavelength dimensions, circumventing the diffraction limit and concentrating electromagnetic fields, leading to significantly enhanced light-matter interactions. The second is that the advances in nanofabrication methods, driven by the silicon microelectronics industry, has allowed for the fabrication and development of metallic structures at the nanoscale, a requirement for the excitation of plasmons with visible light.
 
 This thesis explores some aspects of how plasmonics can be used to exploit the design, fabrication and applications of nanostructures that result in materials with highly tailored optical properties. In particular, this thesis will demonstrate the understanding of how high electromagnetic field density that plasmons create produce optically-generated forces. Applications of the optically-generated forces presented here include the advanced control of nanoparticles that form the building blocks of metamaterials, as well as metasurface designs that vary polarization and encode information. 
 
