--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,8 +1,8 @@
 \section{Overview of the dissertation}
-This dissertation covers a variety of ways that nanophotonics can harness the physics of light, from manipulating optical forces at the nanoscale, to developing efficient ways to encode information in the architecture of light. The focus of the thesis will be to understand the optical forces that are generated on nanoparticles and demonstrate the applications of such forces. 
+This thesis covers a variety of ways that nanophotonics can harness the physics of light, from the ability to manipulate optical forces at the nanoscale, to developing efficient ways to encode information in the architecture of light. The focus of the thesis will be to understand the optical forces that are generated on nanoparticles and demonstrate the applications of such forces. 
 
 The first chapter of this thesis introduces the field of nanophotonics and explains how electron density waves that propagate along a metal-dielectric interface, commonly known as plasmons, can have such a large impact on the field. Following, is a brief introduction on how plasmonic excitations are born, as well as the forces that result from the high electric field density plasmons are known for.
-In chapter 2 the development of magneto-optical responses in plasmonic materials, that explores the magnetization of nanoparticles via the illumination of circularly-polarized light. This phenomenon offers a new degree of control over the Lorentz force exerted on plasmonic nanoparticles. As described in the third chapter, Lorentz forces influence the motion of anisotropic nanoparticles, namely nanowires, illuminated at oblique incidences, and the non-intuitive motion subsequently results. In the following chapter (chapter 4) polarization properties are explored for a metasurface composed of non-chiral sub-structures, the phenomenon of which is derived from the Lorentz force that occurs between substructures that are measured in the polarization properties as light passes through the material. Finally, chapter 5 illustrates an efficient way to spatially encode information with fractal architecture.
+In chapter 2 the development of magneto-optical responses in plasmonic materials, that explores the magnetization of nanoparticles via the illumination of circularly-polarized light. This phenomenon offers a new degree of control over the Lorentz force exerted on plasmonic nanoparticles. As described in the third chapter, Lorentz forces influence the motion of anisotropic nanoparticles, namely nanowires, illuminated at oblique incidences, and described is the non-intuitive motion subsequently results. In the following chapter (chapter 4) polarization properties are explored for a metasurface composed of non-chiral sub-structures, the phenomenon of which is derived from the Lorentz force that occurs between substructures that are measured in the polarization properties as light passes through the material. Finally, chapter 5 illustrates an efficient way to spatially encode information with fractal architecture.
 
 %As of recent, there has been a lot of interest in the development of 3D (metamaterials) and 2D (metasurface) geometries that possess optical properties not found in nature. While there has been much advancement in the field, such as the fabrication of negative index materials [\cite{Padilla:2006, Dolling:07, shelby:489}], perfect lenses [\cite{Khorasaninejad:2016, Yang:14, Khorasaninejad1190}], and materials with permittivity close to zero [\cite{JPark:2015c, Alu:07}], many of these materials are limited to a small sample area and possess other pitfalls of top-down processing. Complete understanding of the optical forces generated on metallic nanoparticles leads the way to facilitate bottom-up processing of metasurfaces and metamaterials suitable for large-scale production. 
 
