update approval page

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -79,7 +79,7 @@ where the real and imaginary parts of this complex function $\epsilon(\omega) = 
 \end{equation}
 The Drude model is sufficient in explaining the AC conductivity in metals, however it is insufficient at describing the optical properties of noble metals in the visible regime. By adding a spring-like resonance term to Eq.~\ref{drude_eq1} the model performs much better. In the visible portion of the electromagnetic spectrum, the frequency of electromagnetic waves coincide with the natural oscillation of free electrons in noble metals; when polarization-specific light is incident on noble metals the free electrons oscillate in resonance. 
 \begin{equation}
-m\ddot{\mathbf{r}}+m\gamma\dot{\mathbf{r}}-\omega_0^2 = -e\mathbf{E},
+m\ddot{\mathbf{r}}+m\gamma\dot{\mathbf{r}}-m\omega_0^2\mathbf{r} = -e\mathbf{E},
 \label{drude_eq2}
 \end{equation}
 
